kubernetes/apps/network/envoy-gateway/config/gateway.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.kubernetes.io/target: &hostname external.bykaj.app
    gatus.home-operations.com/endpoint: |-
      alerts:
        - type: pushover
      client:
        dns-resolver: tcp://1.1.1.1:53
        # Ref: https://github.com/TwiN/gatus/issues/1182
        insecure: true
      group: external
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.73.20.120
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: bykaj-app-tls
          - kind: Secret
            name: bykaj-dev-tls
          - kind: Secret
            name: bykaj-io-tls
          - kind: Secret
            name: cetana-id-tls
          - kind: Secret
            name: drup-lol-tls
          - kind: Secret
            name: kaj-pics-tls
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: &hostname internal.bykaj.app
    gatus.home-operations.com/endpoint: |-
      alerts:
        - type: pushover
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.73.20.110
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: bykaj-app-tls
          - kind: Secret
            name: bykaj-dev-tls
          - kind: Secret
            name: bykaj-io-tls
          - kind: Secret
            name: coder-bykaj-dev-tls
          - kind: Secret
            name: cetana-id-tls
          - kind: Secret
            name: drup-lol-tls
          - kind: Secret
            name: kaj-pics-tls
