kubernetes/apps/network/envoy-gateway/config/internal.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.home.${DOMAIN_NET}
    gatus.home-operations.com/endpoint: |-
      alerts:
        - type: pushover
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.73.10.10
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_APP/./-}-tls
          - kind: Secret
            name: ${DOMAIN_DEV/./-}-tls
          - kind: Secret
            name: coder-${DOMAIN_DEV/./-}-tls
          - kind: Secret
            name: ${DOMAIN_ID/./-}-tls
          - kind: Secret
            name: ${DOMAIN_IO/./-}-tls
          - kind: Secret
            name: ${DOMAIN_LOL/./-}-tls
          - kind: Secret
            name: ${DOMAIN_NET/./-}-tls
          - kind: Secret
            name: ${DOMAIN_ST/./-}-tls
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
