kubernetes/apps/network/envoy-gateway/config/services.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-services
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname services.home.${DOMAIN_NET}
    gatus.home-operations.com/endpoint: |-
      group: services
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.73.10.30
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_APP/./-}-tls
          - kind: Secret
            name: ${DOMAIN_IO/./-}-tls
          - kind: Secret
            name: home-${DOMAIN_NET/./-}-tls
          - kind: Secret
            name: kvm-home-${DOMAIN_NET/./-}-tls
    - name: tls-app
      protocol: TLS
      port: 443
      hostname: "*.${DOMAIN_APP}"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-services
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-services
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
